--- a/app/src/app/upstream-info/upstream-info.component.scss
+++ b/app/src/app/upstream-info/upstream-info.component.scss
@@ -11,7 +11,7 @@
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 170px;
+  max-width: 162px;
 }
 .ellipsis:hover {
   overflow: visible;
